--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -37,7 +37,7 @@
   </div>
   
   <div class="partnerscol">
-      <h2>Community - Army</h2>
+      <h2>Community - Force</h2>
     <div class="imalinksforce">
           <a href="#" target="_blank"><img src="img/community-force/community-force.png"></a>
           <a href="#" target="_blank"><img src="img/community-force/community-force.png"></a>
