--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -581,7 +581,7 @@ body {
 	flex-wrap:wrap;
 	justify-content:space-around;
 	align-items:center;
-	width:100%;
+	width:95%;
 }
 
 .peoplex1 {
@@ -590,6 +590,8 @@ body {
 	justify-content:center;
 	align-items:center;
 	margin-bottom:20px;
+	width:130px;
+	height:auto;
 }
 
 .peoplex1 h5,
