--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -647,7 +647,8 @@ body {
 	flex-wrap:wrap;
 	justify-content:space-around;
 	align-items:center;
-	width:180px;
+	width:130px;
+    height: auto;
 	margin: 10px 0 10px 0;
 }
 
@@ -664,5 +665,6 @@ body {
 	justify-content:space-around;
 	align-items:center;
 	width:120px;
+    height: auto;
 	margin: 10px 0 10px 0;
 }
