--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,29 +1,57 @@
 <section id="contact">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+    <div class="containersn">
+        <div class="rowsn">
+            <div class="col-lg-8 col-lg-offset-2 text-center encabezamiento">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>Ready to be part of our hybrid financial ecosystem? That's great, you have all the tools to join our developments! If you have doubts, participate in our social networks or send us an email, asking everything you need to know, we will answer you as soon as possible!</p>
             </div>
-        <div class="col-lg-2 col-lg-offset-2 text-center">
-            <a href="https://twitter.com/{{ site.twitter_username }}">
+		<div class="footsocialnetworks">	
+<!--TWITTER ELECTHRON -->
+        <div class="col-lg-2 col-lg-offset-2 text-center redessociales">
+            <a href="https://twitter.com/">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.twitter_username }}</p>
+
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="mailto:{{ site.email }}">
+<!--TWITTER SOUJIANG -->		
+		<div class="col-lg-2 col-lg-offset-2 text-center redessociales">
+            <a href="https://twitter.com/">
+                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            </a>
+        </div>
+<!--CORREO ELECTRONICO -->
+        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+            <a href="mailto:">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.email }}</p>
             </a>
         </div>
-        <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://github.com/{{ site.github_username }}">
+<!--INSTAGRAM -->
+        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+            <a href="https://github.com/">
+            <i class="fa fa-instagram fa-3x wow bounceIn".1s"></i>
+            </a>
+        </div>
+<!--DISCORD -->
+        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+            <a href="https://github.com/">
+            <i class="fab fa-discord fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            </a>
+        </div>
+<!--FACEBOOK -->
+        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+            <a href="https://github.com/">
+            <i class="fab fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            </a>
+        </div>
+<!--GITHUB -->
+        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+            <a href="https://github.com/">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>{{ site.github_username }}</p>
             </a>
         </div>
 
+	</div>
+	</div>
     </div>
 </section>
