--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
         <div class="rowsn">
             <div class="col-lg-8 col-lg-offset-2 text-center encabezamiento">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
-                <hr class="primary">
+                <hr class="hr">
                 <p>Ready to be part of our hybrid financial ecosystem? That's great, you have all the tools to join our developments! If you have doubts, participate in our social networks or send us an email, asking everything you need to know, we will answer you as soon as possible!</p>
             </div>
 		<div class="footsocialnetworks">	
