--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -677,6 +677,7 @@ body {
 	flex-wrap:wrap;
 	justify-content:center;
 	align-items:center;
+    background:blue;
 }
 
 .containersn {
@@ -684,6 +685,7 @@ body {
 	flex-wrap:wrap;
 	flex-direction:column;
 	width:95%;
+    background:green;
 }
 
 .rowsn {
@@ -693,6 +695,7 @@ body {
 	width:100%;
 	justify-content:center;
 	align-items:center;
+    background:purple;
 }
 
 .encabezamiento {
