--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -8,44 +8,44 @@
             </div>
 		<div class="footsocialnetworks">	
 <!--TWITTER ELECTHRON -->
-        <div class="col-lg-2 col-lg-offset-2 text-center redessociales">
+        <div class="redessociales">
             <a href="https://twitter.com/">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
 
             </a>
         </div>
 <!--TWITTER SOUJIANG -->		
-		<div class="col-lg-2 col-lg-offset-2 text-center redessociales">
+		<div class="redessociales">
             <a href="https://twitter.com/">
                 <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--CORREO ELECTRONICO -->
-        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+        <div class="redessociales">
             <a href="mailto:">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--INSTAGRAM -->
-        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+        <div class="redessociales">
             <a href="https://github.com/">
             <i class="fa fa-instagram fa-3x wow bounceIn".1s"></i>
             </a>
         </div>
 <!--DISCORD -->
-        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+        <div class="redessociales">
             <a href="https://github.com/">
             <i class="fab fa-discord fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--FACEBOOK -->
-        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+        <div class="redessociales">
             <a href="https://github.com/">
             <i class="fab fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--GITHUB -->
-        <div class="col-lg-2 col-lg-offset-1 text-center redessociales">
+        <div class="redessociales">
             <a href="https://github.com/">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
