--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -684,6 +684,8 @@ body {
 	display:flex;
 	flex-wrap:wrap;
 	flex-direction:column;
+    justify-content: center;
+    align-items: center;
 	width:95%;
     background:green;
 }
