--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -35,13 +35,13 @@
 <!--DISCORD -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i class="fab fa-discord fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa-brand fa-discord fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--FACEBOOK -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i class="fab fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa-brand fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--GITHUB -->
