--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -42,6 +42,7 @@
         <div class="redessociales">
             <a href="https://github.com/">
             <i class="fa-brands fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <i class="fa-brands fa-facebook"></i>
             </a>
         </div>
 <!--GITHUB -->
