--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -41,8 +41,7 @@
 <!--FACEBOOK -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i class="fa-brands fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <i class="fa-brands fa-facebook"></i>
+            <i cclass="fab fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
             </a>
         </div>
 <!--GITHUB -->
