--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,53 +1,52 @@
 <section id="contact">
     <div class="containersn">
         <div class="rowsn">
-            <div class="encabezamiento">
+            <div class="col-lg-8 col-lg-offset-2 text-center encabezamiento">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
-                <hr class="hr">
+                <hr>
                 <p>Ready to be part of our hybrid financial ecosystem? That's great, you have all the tools to join our developments! If you have doubts, participate in our social networks or send us an email, asking everything you need to know, we will answer you as soon as possible!</p>
             </div>
 		<div class="footsocialnetworks">	
 <!--TWITTER ELECTHRON -->
         <div class="redessociales">
             <a href="https://twitter.com/">
-                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-
+                <img src="./img/logos/twitter.png">
             </a>
         </div>
 <!--TWITTER SOUJIANG -->		
 		<div class="redessociales">
             <a href="https://twitter.com/">
-                <i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <img src="./img/logos/twitter.png">
             </a>
         </div>
 <!--CORREO ELECTRONICO -->
         <div class="redessociales">
             <a href="mailto:">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <img src="./img/logos/email.png">
             </a>
         </div>
 <!--INSTAGRAM -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i class="fa fa-instagram fa-3x wow bounceIn".1s"></i>
+            <img src="./img/logos/instagram.png">
             </a>
         </div>
 <!--DISCORD -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i class="fa-brands fa-discord fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <img src="./img/logos/discord.png">
             </a>
         </div>
 <!--FACEBOOK -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i cclass="fab fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <img src="./img/logos/facebook.png">
             </a>
         </div>
 <!--GITHUB -->
         <div class="redessociales">
             <a href="https://github.com/">
-            <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <img src="./img/logos/github.png">
             </a>
         </div>
 
