--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -677,7 +677,6 @@ body {
 	flex-wrap:wrap;
 	justify-content:center;
 	align-items:center;
-    background:blue;
 }
 
 .containersn {
@@ -687,7 +686,6 @@ body {
     justify-content: center;
     align-items: center;
 	width:95%;
-    background:green;
 }
 
 .rowsn {
@@ -697,7 +695,6 @@ body {
 	width:100%;
 	justify-content:center;
 	align-items:center;
-    background:purple;
 }
 
 .encabezamiento {
@@ -731,14 +728,16 @@ body {
 	flex-direction:column;
 	justify-content:center;
 	align-items:center;
-	width:50px;
 	margin: 10px 0 10px 0;
 }
 
-.redessociales i{
-	color:grey;
+.redessociales img {
+	width:50px;
 }
 
-.hr {
-    border-top: 1px solid red;
+hr {
+  height: 3px;
+  width:80%;
+  background:black;
+  border-style: none;
 }
