--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -6,97 +6,91 @@
              <div class="peoplex4">
          
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/andreblackstone.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/andres.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/carlosjohanson.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/charlie.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>                 
      
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/edgar.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/jackson.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/james.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/jhonthomas.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>                 
          
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/joesmith.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/lucas.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/luisfernandez.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/noah.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
          
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/oliver.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/rodrigo.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
                  
                  <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
-                 </div>
-                 
-                 <div class="peoplex1">
-                 <img src="../img/portfolio/DAPPS.png">
+                 <img src="../img/team/rodrigodiaz.png">
                  <h5>NOMBRE</h5>
                  <h6>CARGO</h6>		
                  </div>
