--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -589,7 +589,7 @@ body {
 	flex-direction:column;
 	justify-content:center;
 	align-items:center;
-	margin-bottom:20px;
+	margin: 10px 0 10px 0;
 	width:130px;
 	height:auto;
 }
