--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -7,92 +7,92 @@
          
                  <div class="peoplex1">
                  <img src="../img/team/andreblackstone.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Andre Blackstone</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/andres.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Andres</h5>
+                 <h6>public relations officer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/carlosjohanson.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Carlos Johanson</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/charlie.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Charlie</h5>
+                 <h6>designer</h6>		
                  </div>                 
      
                  <div class="peoplex1">
                  <img src="../img/team/edgar.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Edgar</h5>
+                 <h6>communications</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/jackson.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Jackson</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/james.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>James</h5>
+                 <h6>designer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/jhonthomas.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Jhon Thomas</h5>
+                 <h6>programmer</h6>		
                  </div>                 
          
                  <div class="peoplex1">
                  <img src="../img/team/joesmith.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Joe Smith</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/lucas.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Lucas</h5>
+                 <h6>designer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/luisfernandez.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Luis Fernandez</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/noah.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Noah</h5>
+                 <h6>communications</h6>		
                  </div>
          
                  <div class="peoplex1">
                  <img src="../img/team/oliver.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Oliver</h5>
+                 <h6>designer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/rodrigo.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Rodrigo</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
                  <div class="peoplex1">
                  <img src="../img/team/rodrigodiaz.png">
-                 <h5>NOMBRE</h5>
-                 <h6>CARGO</h6>		
+                 <h5>Rodrigo Diaz</h5>
+                 <h6>programmer</h6>		
                  </div>
                  
              </div>
