--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -596,7 +596,7 @@ body {
 
 .peoplex1 h5,
 .peoplex1 h6 {
-	margin:0;
+	margin:5px 0 0 0;
 	padding:0;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
