--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -599,6 +599,7 @@ body {
 	margin:5px 0 0 0;
 	padding:0;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color:white;
 }
 
 .peoplex1 img {
