--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -560,7 +560,7 @@ body {
 	flex-direction:column;
 	justify-content:space-around;
 	align-items:center;
-    background-image: url('../img/worldteam.gif');
+    background-image: url('../img/rayos.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
