--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -543,6 +543,10 @@ body {
 
 #team {
 	background:#001222;
+    background-image: url('../img/team.gif');
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .contteam {
@@ -560,10 +564,6 @@ body {
 	flex-direction:column;
 	justify-content:space-around;
 	align-items:center;
-    background-image: url('../img/rayos.gif');
-    background-position: center; 
-    background-repeat: no-repeat;
-    background-size: cover;
 	width:100%;
 }
 
