--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -573,6 +573,7 @@ body {
 	align-items:center;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	width:100%;
+    color:white;
 
 }
 
