--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -396,6 +396,9 @@ body {
 }
 
 /*CALL TO ACTION*/
+#ecosystem {
+    background:#001222;
+}
 
 .call {
     text-align:justify;
@@ -407,7 +410,7 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-    background: rgb(17, 86, 170);
+    background:#001222;
     padding-top: 15px;
     padding-bottom: 15px;
     margin:0;
@@ -456,6 +459,7 @@ body {
 	justify-content:center;
 	align-items:center;
 	width:90%;
+    background:#001222;
 }
 
 .airdropcontent h2,
