--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -397,7 +397,11 @@ body {
 
 /*CALL TO ACTION*/
 #ecosystem {
-    background:#001222;
+	background:#001222;
+    background-image: url('../img/calltoaction.gif');
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .call {
