--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -551,6 +551,16 @@ body {
 	width:100%;
 }
 
+/*COMMUNITY*/
+
+#community {
+	background:#001222;
+    background-image: url('../img/community.gif');
+    background-position: center; 
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 /*TEAM*/
 
 #team {
