--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -7,8 +7,8 @@
          
                  <div class="peoplex1">
                  <img src="../img/team/andreblackstone.png">
-                 <h5>Andre Blackstone</h5>
-                 <h6>programmer</h6>		
+                 <h5>Soujiang</h5>
+                 <h6>Tech Visionary & CEO</h6>		
                  </div>
                  
                  <div class="peoplex1">
