--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -398,7 +398,7 @@ body {
 /*CALL TO ACTION*/
 #ecosystem {
 	background:#001222;
-    background-image: url('../img/calltoaction.gif');
+    background-image: url('../img/descentralization.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
