--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -561,7 +561,7 @@ body {
 
 #community {
 	background:#001222;
-    background-image: url('../img/lightblue.gif');
+    background-image: url('../img/ligth.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
