--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -456,7 +456,7 @@ body {
 	align-items:center;
 	width:100%;
 	background:#001222;
-    background-image: url('../img/lightblue.gif');
+    background-image: url('../img/community.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
