--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -571,7 +571,7 @@ body {
 
 #team {
 	background:#001222;
-    background-image: url('../img/team.gif');
+    background-image: url('../img/ligth.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
