--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -456,7 +456,7 @@ body {
 	align-items:center;
 	width:100%;
 	background:#001222;
-    background-image: url('../img/community.gif');
+    background-image: url('../img/thunder.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
@@ -561,7 +561,7 @@ body {
 
 #community {
 	background:#001222;
-    background-image: url('../img/ligth.gif');
+    background-image: url('../img/thunder.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
@@ -571,7 +571,7 @@ body {
 
 #team {
 	background:#001222;
-    background-image: url('../img/particles.gif');
+    background-image: url('../img/thunder.gif');
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover;
