--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -697,7 +697,7 @@ body {
 	align-items:center;
 	width:120px;
     height: auto;
-	margin: 10px 0 10px 0;
+	margin: 10px;
 }
 
 /*FOOTER REDES SOCIALES*/
