--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -678,8 +678,8 @@ body {
 	flex-wrap:wrap;
 	justify-content:space-around;
 	align-items:center;
-	width:110px;
-    height: auto;
+	/*width:110px;
+    height: auto;*/
 	margin: 10px 0 10px 0;
 }
 
@@ -687,7 +687,6 @@ body {
 .imalinkscollaborators img,
 .imalinksforce img {
 	width:100%;
-    padding:10px;
 }
 
 .imalinkscollaborators a,
