--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -678,9 +678,9 @@ body {
 	flex-wrap:wrap;
 	justify-content:space-around;
 	align-items:center;
-	/*width:110px;
-    height: auto;*/
-	margin: 10px 0 10px 0;
+	width:200px;
+    height: auto;
+	margin: 15px;
 }
 
 .imalinkspartners img,
