--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -644,6 +644,8 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 	width:100%;
+    margin:0;
+    padding:0;
 }
 
 .partnerscol {
@@ -661,6 +663,7 @@ body {
 	justify-content:space-around;
 	align-items:center;
 	width:100%;
+    color:white;
 }
 
 .imalinkspartners,
