--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -37,7 +37,7 @@
   </div>
   
   <div class="partnerscol">
-      <h2>Community - Family</h2>
+      <h2>Communities - Family</h2>
     <div class="imalinksforce">
           <a href="#" target="_blank"><img src="img/community-family/community-family.png"></a>
           <a href="#" target="_blank"><img src="img/community-family/community-family.png"></a>
