--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -644,7 +644,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 	width:100%;
-    margin:0 0 1em 0;
+    margin:0 0 20px 0;
     padding:0;
 }
 
