--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,43 +9,43 @@
 		<div class="footsocialnetworks">	
 <!--TWITTER ELECTHRON -->
         <div class="redessociales">
-            <a href="https://twitter.com/">
+            <a href="https://twitter.com/Electhrons_ELTH/" target="_blank">
                 <img src="./img/logos/twitter.png">
             </a>
         </div>
 <!--TWITTER SOUJIANG -->		
 		<div class="redessociales">
-            <a href="https://twitter.com/">
+            <a href="https://twitter.com/Soujiang_ELTH/" target="_blank">
                 <img src="./img/logos/twitter.png">
             </a>
         </div>
 <!--CORREO ELECTRONICO -->
         <div class="redessociales">
-            <a href="mailto:">
+            <a href="mailto:electhronsprojects@gmail.com" target="_blank">
             <img src="./img/logos/email.png">
             </a>
         </div>
 <!--INSTAGRAM -->
         <div class="redessociales">
-            <a href="https://github.com/">
+            <a href="https://www.instagram.com/electhrons_elth/" target="_blank">
             <img src="./img/logos/instagram.png">
             </a>
         </div>
 <!--DISCORD -->
         <div class="redessociales">
-            <a href="https://github.com/">
+            <a href="https://discord.gg/Zmr7n4SV" target="_blank">
             <img src="./img/logos/discord.png">
             </a>
         </div>
 <!--FACEBOOK -->
         <div class="redessociales">
-            <a href="https://github.com/">
+            <a href="https://www.facebook.com/Electhrons-ELTH-109715598323773" target="_blank">
             <img src="./img/logos/facebook.png">
             </a>
         </div>
 <!--GITHUB -->
         <div class="redessociales">
-            <a href="https://github.com/">
+            <a href="https://github.com/electhrons" target="_blank">
             <img src="./img/logos/github.png">
             </a>
         </div>
