--- a/_includes/headerv.html
+++ b/_includes/headerv.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="headervcontent">
+    <div class="headervcontent" id="whitepaper">
         <div class="headerv">
             <h1>we're a new decentralized financial ecosystem made of pure energy</h1>
             <hr>
