--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,14 +15,19 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#ecosystem">ecosystem</a>
-                </li>
-                <li>
-                    <a class="page-scroll" href="#descentralization">descentralization</a>
+                    <a class="page-scroll" href="#whitepaper">whitepaper</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#platforms">platforms</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#ecosystem">ecosystem</a>
+                </li>
+
+                <li>
+                    <a class="page-scroll" href="#descentralization">descentralization</a>
+                </li>
+
                 <li>
                     <a class="page-scroll" href="#community">community</a>
                 </li>
