--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,7 +36,7 @@
                 </li>
 
                 <li>
-                    <a class="page-scroll" href="#bg-dark">team</a>
+                    <a class="page-scroll" href="#team">team</a>
                 </li>
 
                 <li>
