--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -47,5 +47,6 @@
           <a href="#" target="_blank"><img src="img/community-family/community-family.png"></a>
     </div>
   </div>
-    </div>  
-      </section>
+    </div> 
+<hr class="divisor">
+</section>
