--- a/_includes/services.html
+++ b/_includes/services.html
@@ -33,5 +33,5 @@
                     <p>A financial metaverse designed to make money</p>
                 </div>
     </div>
-
+    <hr class="divisor">
 </section>
