--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -773,9 +773,18 @@ body {
 	width:50px;
 }
 
+/*HR*/
+
 hr {
   height: 3px;
   width:80%;
   background:black;
   border-style: none;
 }
+
+.divisor {
+    height: 3px;
+    width:80%;
+    background:white;
+    border-style: none;
+  }
