--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -49,7 +49,12 @@
             <img src="./img/logos/github.png">
             </a>
         </div>
-
+<!--TELEGRAM -->
+        <div class="redessociales">
+            <a href="https://t.me/electhrons_ELTH" target="_blank">
+            <img src="./img/logos/telegram.png">
+            </a>
+        </div>
 	</div>
 	</div>
     </div>
